<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/money"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:gravity="center"
        android:text="@string/sigIn"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearAuth"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:paddingStart="5dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:hint="@string/login_email_com"
            android:textColorHint="@color/black"
            android:background="@color/white"
            android:inputType="textEmailAddress"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="25dp"
            android:textSize="16sp"
            android:layout_gravity="start"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:paddingStart="5dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:hint="@string/star"
            android:background="@color/white"
            android:autofillHints="password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/inCorrectPass"
            android:textSize="16sp"
            android:layout_gravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:textColor="@color/error" />

    </LinearLayout>


    <Button
        android:id="@+id/logInButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/signInButton"
        android:textSize="16sp"
        android:backgroundTint="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearAuth" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anotherEntrance"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sigIn"
                android:src="@drawable/google" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sigIn"
                android:src="@drawable/facebook" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/sigIn"
                android:src="@drawable/twitter" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>